use .toList() instead of Collectors.toList() in NexusMetadataUtility
and use pattern-matching instanceof

Change-Id: I827dee1b588cfbba86db29339563eb89b9e0cdce